10-http-method-filtering/destination-rule-layer1.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: layer1
spec:
  host: layer1
  subsets:
  - name: v1
    labels:
      version: v1
